part2/exercise02/todo-backend/todo-backend-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: todo-backend-dep
spec:
  replicas: 1
  selector:
    matchLabels:
      app: todo-backend 
  template:
    metadata:
      labels:
        app: todo-backend 
    spec:
      containers:
        - name: todo-backend 
          image: mashiahoz/todo-backend
